apps/example-repo-new-7/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-repo-new-7
  labels:
    app: example-repo-new-7
    backstage.io/kubernetes-id: example-repo-new-7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-repo-new-7
  template:
    metadata:
      labels:
        app: example-repo-new-7
        backstage.io/kubernetes-id: example-repo-new-7
    spec:
      containers:
        - name: example-repo-new-7
          image: jaykumark7/example-repo-new-7:1.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
