apps/example-repo-new-7/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-repo-new-7
spec:
  selector:
    app: example-repo-new-7
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
