apps/example-repo-new-7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-repo-new-7
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /example-repo-new-7
            pathType: Prefix
            backend:
              service:
                name: example-repo-new-7
                port:
                  number: 80
